--- a/citydlebyfu2.html
+++ b/citydlebyfu2.html
@@ -265,7 +265,7 @@
 {name: "Vlore", lat: 40.4668, lon: 19.4896, continent: "Europe", country: "Albania"},
 {name: "Durres", lat: 41.3232, lon: 19.4417, continent: "Europe", country: "Albania"},
 {name: "Skopje", lat: 41.9973, lon: 21.4280, continent: "Europe", country: "North Macedonia"},
-{name: "Titovo", lat: 41.3639, lon: 20.7000, continent: "Europe", country: "North Macedonia"},
+{name: "Tetovo", lat: 41.3639, lon: 20.7000, continent: "Europe", country: "North Macedonia"},
 {name: "Bitola", lat: 41.0365, lon: 21.3280, continent: "Europe", country: "North Macedonia"},
 {name: "Ohrid", lat: 41.1120, lon: 20.8012, continent: "Europe", country: "North Macedonia"},
 {name: "Sofia", lat: 42.6977, lon: 23.3219, continent: "Europe", country: "Bulgaria"},
