--- a/laptop.html
+++ b/laptop.html
@@ -98,7 +98,121 @@
 
     <script>
         const cities = [
-
+  {name: "Moscow", lat: 55.7558, lon: 37.6173, continent: "Europe", country: "Russia"},
+    {name: "Kharkiv", lat: 50.0000, lon: 36.2500, continent: "Europe", country: "Ukraine"},
+    {name: "St Petersburg", lat: 59.9375, lon: 30.3086, continent: "Europe", country: "Russia"},
+    {name: "Kazan", lat: 55.7887, lon: 49.1221, continent: "Europe", country: "Russia"},
+    {name: "Grozny", lat: 43.3168, lon: 45.6815, continent: "Europe", country: "Russia"},
+    {name: "Yekaterinburg", lat: 56.8389, lon: 60.6057, continent: "Europe", country: "Russia"},
+    {name: "Omsk", lat: 54.9885, lon: 73.3242, continent: "Europe", country: "Russia"},
+    {name: "Tbilisi", lat: 41.7151, lon: 44.8271, continent: "Asia", country: "Georgia"},
+    {name: "Baku", lat: 40.4093, lon: 49.8671, continent: "Asia", country: "Azerbaijan"},
+    {name: "Yerevan", lat: 40.1872, lon: 44.5152, continent: "Asia", country: "Armenia"},
+    {name: "Gaziantep", lat: 37.0662, lon: 37.3833, continent: "Asia", country: "Turkey"},
+    {name: "Ankara", lat: 39.9334, lon: 32.8597, continent: "Asia", country: "Turkey"},
+    {name: "Diyabakir", lat: 37.9144, lon: 40.2306, continent: "Asia", country: "Turkey"},
+    {name: "Samsun", lat: 41.2867, lon: 36.3300, continent: "Asia", country: "Turkey"},
+    {name: "Damasus", lat: 33.5138, lon: 36.2765, continent: "Asia", country: "Syria"},
+    {name: "Homs", lat: 34.7324, lon: 36.7137, continent: "Asia", country: "Syria"},
+    {name: "Latakia", lat: 35.5317, lon: 35.7915, continent: "Asia", country: "Syria"},
+    {name: "Nicosia", lat: 35.1856, lon: 33.3823, continent: "Asia", country: "Cyprus"},
+    {name: "Jerusalem", lat: 31.7683, lon: 35.2137, continent: "Asia", country: "Israel"},
+    {name: "Gaza City", lat: 31.5017, lon: 34.4668, continent: "Asia", country: "Palestine"},
+    {name: "Tel Aviv", lat: 32.0853, lon: 34.7818, continent: "Asia", country: "Israel"},
+    {name: "Baghdad", lat: 33.3152, lon: 44.3661, continent: "Asia", country: "Iraq"},
+    {name: "Basra", lat: 30.5085, lon: 47.7804, continent: "Asia", country: "Iraq"},
+    {name: "Erbil", lat: 36.1911, lon: 44.0094, continent: "Asia", country: "Iraq"},
+    {name: "Mosul", lat: 36.3350, lon: 43.1189, continent: "Asia", country: "Iraq"},
+    {name: "Tehran", lat: 35.6892, lon: 51.3890, continent: "Asia", country: "Iran"},
+    {name: "Isfahan", lat: 32.6546, lon: 51.6680, continent: "Asia", country: "Iran"},
+    {name: "Tabriz", lat: 38.0800, lon: 46.2919, continent: "Asia", country: "Iran"},
+    {name: "Bandar Abbas", lat: 27.1832, lon: 56.2668, continent: "Asia", country: "Iran"},
+    {name: "Dammam", lat: 26.4344, lon: 50.1033, continent: "Asia", country: "Saudi Arabia"},
+    {name: "Riyadh", lat: 24.7136, lon: 46.6753, continent: "Asia", country: "Saudi Arabia"},
+    {name: "Tabuk", lat: 28.3998, lon: 36.5715, continent: "Asia", country: "Saudi Arabia"},
+    {name: "Jeddah", lat: 21.4858, lon: 39.1925, continent: "Asia", country: "Saudi Arabia"},
+    {name: "Mecca", lat: 21.3891, lon: 39.8579, continent: "Asia", country: "Saudi Arabia"},
+    {name: "Manama", lat: 26.2285, lon: 50.5860, continent: "Asia", country: "Bahrain"},
+    {name: "Doha", lat: 25.2854, lon: 51.5310, continent: "Asia", country: "Qatar"},
+    {name: "Abu Dhabi", lat: 24.4539, lon: 54.3773, continent: "Asia", country: "UAE"},
+    {name: "Dubai", lat: 25.2048, lon: 55.2708, continent: "Asia", country: "UAE"},
+    {name: "Al Ain", lat: 24.1302, lon: 55.8023, continent: "Asia", country: "UAE"},
+    {name: "Muscat", lat: 23.5880, lon: 58.3829, continent: "Asia", country: "Oman"},
+    {name: "Sanaa", lat: 15.3694, lon: 44.1910, continent: "Asia", country: "Yemen"},
+    {name: "Aden", lat: 12.7797, lon: 45.0095, continent: "Asia", country: "Yemen"},
+    {name: "Ashgabat", lat: 37.9601, lon: 58.3261, continent: "Asia", country: "Turkmenistan"},
+    {name: "Mary", lat: 37.5944, lon: 61.8303, continent: "Asia", country: "Turkmenistan"},
+    {name: "Turkmanabat", lat: 39.0735, lon: 63.5785, continent: "Asia", country: "Turkmenistan"},
+    {name: "Nukus", lat: 42.4600, lon: 59.6100, continent: "Asia", country: "Uzbekistan"},
+    {name: "Tashkent", lat: 41.2995, lon: 69.2401, continent: "Asia", country: "Uzbekistan"},
+    {name: "Jizzax", lat: 40.1158, lon: 67.8422, continent: "Asia", country: "Uzbekistan"},
+    {name: "Samarqand", lat: 39.6542, lon: 66.9597, continent: "Asia", country: "Uzbekistan"},
+    {name: "Namangan", lat: 41.0011, lon: 71.6716, continent: "Asia", country: "Uzbekistan"},
+    {name: "Turkistan", lat: 43.3019, lon: 68.2692, continent: "Asia", country: "Kazakhstan"},
+    {name: "Astana", lat: 51.1605, lon: 71.4704, continent: "Asia", country: "Kazakhstan"},
+    {name: "Almaty", lat: 43.2220, lon: 76.8512, continent: "Asia", country: "Kazakhstan"},
+    {name: "Aktobe", lat: 50.2980, lon: 57.1967, continent: "Asia", country: "Kazakhstan"},
+    {name: "Bishkek", lat: 42.8746, lon: 74.5698, continent: "Asia", country: "Kyrgyzstan"},
+    {name: "Osh", lat: 40.5140, lon: 72.8161, continent: "Asia", country: "Kyrgyzstan"},
+    {name: "Dushanbe", lat: 38.5598, lon: 68.7870, continent: "Asia", country: "Tajikistan"},
+    {name: "Khujand", lat: 40.2837, lon: 69.6219, continent: "Asia", country: "Tajikistan"},
+    {name: "Kabul", lat: 34.5553, lon: 69.2075, continent: "Asia", country: "Afghanistan"},
+    {name: "Islamabad", lat: 33.7215, lon: 73.0433, continent: "Asia", country: "Pakistan"},
+    {name: "Lahore", lat: 31.5204, lon: 74.3587, continent: "Asia", country: "Pakistan"},
+    {name: "Multan", lat: 30.1957, lon: 71.4708, continent: "Asia", country: "Pakistan"},
+    {name: "Quetta", lat: 30.1798, lon: 66.9750, continent: "Asia", country: "Pakistan"},
+    {name: "Karachi", lat: 24.8607, lon: 67.0011, continent: "Asia", country: "Pakistan"},
+    {name: "New Delhi", lat: 28.6139, lon: 77.2090, continent: "Asia", country: "India"},
+    {name: "Mumbai", lat: 19.0760, lon: 72.8777, continent: "Asia", country: "India"},
+    {name: "Chennai", lat: 13.0827, lon: 80.2707, continent: "Asia", country: "India"},
+    {name: "Lucknow", lat: 26.8467, lon: 80.9462, continent: "Asia", country: "India"},
+    {name: "Kolkata", lat: 22.5726, lon: 88.3639, continent: "Asia", country: "India"},
+    {name: "Vijayawada", lat: 16.5062, lon: 80.6480, continent: "Asia", country: "India"},
+    {name: "Bangalore", lat: 12.9716, lon: 77.5946, continent: "Asia", country: "India"},
+    {name: "Colombo", lat: 6.9271, lon: 79.8612, continent: "Asia", country: "Sri Lanka"},
+    {name: "Sri Jayawardenepura Kotte", lat: 6.9000, lon: 79.9000, continent: "Asia", country: "Sri Lanka"},
+    {name: "Dhaka", lat: 23.8103, lon: 90.4125, continent: "Asia", country: "Bangladesh"},
+    {name: "Chittagong", lat: 22.3569, lon: 91.7832, continent: "Asia", country: "Bangladesh"},
+    {name: "Thimphu", lat: 27.4712, lon: 89.6339, continent: "Asia", country: "Bhutan"},
+    {name: "Kathmandu", lat: 27.7172, lon: 85.3240, continent: "Asia", country: "Nepal"},
+    {name: "Darjeeling", lat: 27.0410, lon: 88.2663, continent: "Asia", country: "India"},
+    {name: "Naypyidaw", lat: 19.7633, lon: 96.0785, continent: "Asia", country: "Myanmar"},
+    {name: "Yangon", lat: 16.8661, lon: 96.1951, continent: "Asia", country: "Myanmar"},
+    {name: "Pyay", lat: 18.8246, lon: 95.2219, continent: "Asia", country: "Myanmar"},
+    {name: "Mandalay", lat: 21.9588, lon: 96.0891, continent: "Asia", country: "Myanmar"},
+    {name: "Chiang Mai", lat: 18.7883, lon: 98.9853, continent: "Asia", country: "Thailand"},
+    {name: "Bangkok", lat: 13.7563, lon: 100.5018, continent: "Asia", country: "Thailand"},
+    {name: "Surat Thani", lat: 9.1397, lon: 99.3306, continent: "Asia", country: "Thailand"},
+    {name: "Phuket", lat: 7.8804, lon: 98.3923, continent: "Asia", country: "Thailand"},
+    {name: "Phnom Penh", lat: 11.5564, lon: 104.9282, continent: "Asia", country: "Cambodia"},
+    {name: "Siem Reap", lat: 13.3633, lon: 103.8564, continent: "Asia", country: "Cambodia"},
+    {name: "Sihanoukville", lat: 10.6297, lon: 103.5023, continent: "Asia", country: "Cambodia"},
+    {name: "Vientiane", lat: 17.9757, lon: 102.6331, continent: "Asia", country: "Laos"},
+    {name: "Phongsavan", lat: 19.4500, lon: 103.1833, continent: "Asia", country: "Laos"},
+    {name: "Luang Prabang", lat: 19.8867, lon: 102.1347, continent: "Asia", country: "Laos"},
+    {name: "Pakse", lat: 15.1208, lon: 105.8185, continent: "Asia", country: "Laos"},
+    {name: "Savannakhet", lat: 16.5564, lon: 104.7520, continent: "Asia", country: "Laos"},
+    {name: "Ho Chi Minh City", lat: 10.8231, lon: 106.6297, continent: "Asia", country: "Vietnam"},
+    {name: "Hanoi", lat: 21.0278, lon: 105.8342, continent: "Asia", country: "Vietnam"},
+    {name: "Vinh", lat: 18.6736, lon: 105.6919, continent: "Asia", country: "Vietnam"},
+    {name: "Nha Trang", lat: 12.2388, lon: 109.1969, continent: "Asia", country: "Vietnam"},
+    {name: "Hai Phong", lat: 20.8449, lon: 106.6881, continent: "Asia", country: "Vietnam"},
+    {name: "Macau", lat: 22.1987, lon: 113.5439, continent: "Asia", country: "Macau"},
+    {name: "Guangzhou", lat: 23.1291, lon: 113.2644, continent: "Asia", country: "China"},
+    {name: "Shenzhen", lat: 22.5431, lon: 114.0579, continent: "Asia", country: "China"},
+    {name: "Foshan", lat: 23.0290, lon: 113.1318, continent: "Asia", country: "China"},
+    {name: "Fuzhou", lat: 26.0745, lon: 119.2965, continent: "Asia", country: "China"},
+    {name: "Shanghai", lat: 31.2304, lon: 121.4737, continent: "Asia", country: "China"},
+    {name: "Beijing", lat: 39.9042, lon: 116.4074, continent: "Asia", country: "China"},
+    {name: "Wuhan", lat: 30.5928, lon: 114.3055, continent: "Asia", country: "China"},
+    {name: "Chengdu", lat: 30.5728, lon: 104.0668, continent: "Asia", country: "China"},
+    {name: "Chongqing", lat: 29.4316, lon: 106.9123, continent: "Asia", country: "China"},
+    {name: "Kunming", lat: 24.8801, lon: 102.8329, continent: "Asia", country: "China"},
+    {name: "Xi’an", lat: 34.3416, lon: 108.9398, continent: "Asia", country: "China"},
+    {name: "Qingdao", lat: 36.0671, lon: 120.3826, continent: "Asia", country: "China"},
+    {name: "Tianjin", lat: 39.3434, lon: 117.3616, continent: "Asia", country: "China"},
+    {name: "Suzhou", lat: 31.2984, lon: 120.5853, continent: "Asia", country: "China"},
+    {name: "Hangzhou", lat: 30.2742, lon: 120.1551, continent: "Asia", country: "China"},
             {name: "Nanchang", lat: 28.6820, lon: 115.8582, continent: "Asia", country: "China"},
     {name: "Changsha", lat: 28.2278, lon: 112.9388, continent: "Asia", country: "China"},
     {name: "Lanzhou", lat: 36.0611, lon: 103.8343, continent: "Asia", country: "China"},
